--- a/fiim/templates/fiim/partners.html
+++ b/fiim/templates/fiim/partners.html
@@ -164,3 +164,8 @@
 		</div> <!-- /.homepage -->
 </div>
 {% endblock %}
+{% block scripts %}
+<script>
+	set_active("templatemo_page4");
+</script>
+{% endblock %}
