--- a/fiim/templates/fiim/about.html
+++ b/fiim/templates/fiim/about.html
@@ -67,4 +67,10 @@
 			</div> <!-- /.container -->
 		</div> <!-- /.services -->
 </div>
+
+{% endblock %}
+{% block scripts %}
+<script>
+	set_active("templatemo_home");
+</script>
 {% endblock %}
