--- a/fiim/templates/fiim/contact.html
+++ b/fiim/templates/fiim/contact.html
@@ -53,3 +53,8 @@
 	</div> <!-- /.contact -->
 </div>
 {% endblock %}
+{% block scripts %}
+<script>
+	set_active("templatemo_page5");
+</script>
+{% endblock %}
