add animation FadeInDown

--- a/fiim/templates/fiim/about.html
+++ b/fiim/templates/fiim/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="menu-container">
-       <div class="content about" id="menu-1">
+       <div class="content about animated fadeInDown" id="menu-1">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9 col-sm-10">
