--- a/fiim/templates/fiim/documents.html
+++ b/fiim/templates/fiim/documents.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="menu-container">
-		<div class="content services" id="menu-3">
+		<div class="content services animated fadeInDown" id="menu-3">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9 col-sm-10">
