--- a/fiim/templates/fiim/officials.html
+++ b/fiim/templates/fiim/officials.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div id="menu-container">
 
-		<div class="content products" id="menu-2">
+		<div class="content products animated fadeInDown" id="menu-2">
 			<div class="container">
 					<div class="row">
 						<div class="col-md-3 col-sm-8">
