--- a/fiim/templates/fiim/partners.html
+++ b/fiim/templates/fiim/partners.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="menu-container">
-        <div class="content homepage" id="menu-4">
+        <div class="content homepage animated fadeInDown" id="menu-4">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-2 col-sm-6 col-md-offset-1">
