--- a/fiim/templates/fiim/contact.html
+++ b/fiim/templates/fiim/contact.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="menu-container">
-	<div class="content contact" id="menu-5">
+	<div class="content contact animated fadeInDown" id="menu-5">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
