--- a/fiim/templates/fiim/officials.html
+++ b/fiim/templates/fiim/officials.html
@@ -6,14 +6,14 @@
 		<div class="content products animated fadeInDown" id="menu-2">
 			<div class="container">
 					<div class="row">
-						<div class="col-md-3 col-sm-8">
+						<div class="col-md-4 col-sm-6">
 							<div class="product-item">
 								<img src="/static/fiim/images/products/product1.jpg" alt="product 1">
 								<a href="#" class="product-title">Vestibulum ante ipsum primis</a>
 								<p>This is free <a href="#">HTML5 Template</a> by templatemo and you can use it for any website.</p>
 							</div> <!-- /.product-item -->
 						</div> <!-- /.col-md-4 -->
-						<div class="col-md-3 col-sm-8">
+						<div class="col-md-4 col-sm-6">
 							<div class="product-item">
 								<img src="/static/fiim/images/products/product2.jpg" alt="product 2">
 								<a href="#" class="product-title">Nunc pulvinar leo nec</a>
@@ -21,14 +21,14 @@
 							</div> <!-- /.product-item -->
 						</div> <!-- /.col-md-4 -->
 
-						<div class="col-md-3 col-sm-8">
+						<div class="col-md-4 col-sm-6">
 							<div class="product-item">
 								<img src="/static/fiim/images/products/product3.jpg" alt="product 3">
 								<a href="#" class="product-title">Curabitur mollis dignissim</a>
 								<p>Cras convallis erat vitae odio. Pellentesque rutrum nisl dui, dignissim accumsan nisl.</p>
 							</div> <!-- /.product-item -->
 						</div> <!-- /.col-md-4 -->
-						<div class="col-md-3 col-sm-8">
+						<div class="col-md-4 col-sm-6">
 							<div class="product-item">
 								<img src="/static/fiim/images/products/product4.jpg" alt="product 4">
 								<a href="#" class="product-title">Morbi venenatis nunc</a>
@@ -36,18 +36,18 @@
 							</div> <!-- /.product-item -->
 						</div> <!-- /.col-md-4 -->
 
-						<div class="col-md-3 col-sm-8">
+						<div class="col-md-4 col-sm-6">
 							<div class="product-item">
 								<img src="/static/fiim/images/products/product5.jpg" alt="product 5">
 								<a href="#" class="product-title">Phasellus id elementum</a>
 								<p>Etiam sed felis id eros imperdiet tempus. Mauris sit amet metus risus. Vestibulum mi velit.</p>
 							</div> <!-- /.product-item -->
 						</div> <!-- /.col-md-4 -->
-						<div class="col-md-3 col-sm-8">
+						<div class="col-md-4 col-sm-6">
 							<div class="product-item">
 								<img src="/static/fiim/images/products/product6.jpg" alt="product 6">
 								<a href="#" class="product-title">Donec ullamcorper</a>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, animi quia voluptatem.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, animi quia voluptLorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, animi quia voluptLorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, animi quia voluptatem.</p>
 							</div> <!-- /.product-item -->
 						</div> <!-- /.col-md-4 -->
 					</div> <!-- /.row -->
