add accordion for documents list, cdn bootstrap links

--- a/fiim/templates/fiim/base.html
+++ b/fiim/templates/fiim/base.html
@@ -21,19 +21,20 @@ http://www.templatemo.com/tm-397-concept
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800&amp;subset=cyrillic" rel="stylesheet">
 
 	<!-- CSS Bootstrap & Custom -->
-    <link rel="stylesheet" href="{% static "fiim/css/bootstrap.min.css" %}">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="{% static "fiim/css/animate.css" %}">
     <link rel="stylesheet" href="{% static "fiim/css/font-awesome.min.css" %}">
 	<link rel="stylesheet" href="{% static "fiim/css/templatemo_misc.css" %}">
 
 	<!-- Main CSS -->
+    <link rel="stylesheet" href="{% static "fiim/css/main.css" %}">
 	<link rel="stylesheet" href="{% static "fiim/css/templatemo_style.css" %}">
 
 	<!-- Favicons -->
     <link rel="shortcut icon" href="{% static "fiim/images/ico/favicon.ico" %}">
-	<script language="JavaScript">
-		console.log(window.location.pathname);
-	</script>
 
 </head>
 <body>
@@ -92,10 +93,8 @@ http://www.templatemo.com/tm-397-concept
 	</div> <!-- /.templatemo_footer -->
 
 	<!-- Scripts -->
-	<script src="{% static "fiim/js/jquery-1.10.2.min.js" %}"></script>
     <script src="{% static "fiim/js/jquery-migrate-1.2.1.min.js" %}"></script>
     <script src="{% static "fiim/js/modernizr.js" %}"></script>
-	<script src="{% static "fiim/js/bootstrap.js" %}"></script>
 	<script src="{% static "fiim/js/tabs.js" %}"></script>
 	<script src="{% static "fiim/js/jquery.lightbox.js" %}"></script>
 	<script src="{% static "fiim/js/templatemo_custom.js" %}"></script>
