--- a/fiim/templates/fiim/css/templatemo_style.css
+++ b/fiim/templates/fiim/css/templatemo_style.css
@@ -260,6 +260,7 @@ a.menu-toggle-btn {
 }
 .product-item img {
   width: 100%;
+  max-height: 60vw;
 }
 .product-item a.product-title {
   margin: 15px 0;
