--- a/fiim/templates/fiim/partners.html
+++ b/fiim/templates/fiim/partners.html
@@ -1,164 +1,26 @@
 {% extends 'fiim/base.html' %}
-
+{% load mathfilters %}
 {% block content %}
 <div id="menu-container">
         <div class="content homepage animated fadeInDown" id="menu-4">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-2 col-sm-6 col-md-offset-1">
-						<div class="gallery-item">
-								<img src="/static/fiim/images/gallery/gallery-item1.jpg" alt="image 1">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item1.jpg" data-rel="lightbox" class="fa fa-expand"></a>
+					{% for partner in partners %}
+						{% if forloop.counter0|mod:4 == 0 %}
+						<div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-2">
+						{% else %}
+						<div class="col-md-2 col-sm-4 col-xs-6">
+						{% endif %}
+							<div class="gallery-item">
+								<a href={{partner.link}} target="_blank">
+									<img src="{{partner.image.url}}" alt="{{partner.name}}">
+								</a>
+								<div class="content-gallery">
+									<h3><a href={{partner.link}} target="_blank">{{partner.name}}</a></h3>
 								</div>
-							<div class="content-gallery">
-								<h3>Etiam sed felis</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item2.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item2.jpg" alt="image 2">
-							</div>
-							<div class="content-gallery">
-								<h3>Nulla sagittis</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item3.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item3.jpg" alt="image 3">
-							</div>
-							<div class="content-gallery">
-								<h3>Quisque lacinia</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item4.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item4.jpg" alt="image 4">
-							</div>
-							<div class="content-gallery">
-								<h3>Venenatis</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item5.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item5.jpg" alt="image 5">
-							</div>
-							<div class="content-gallery">
-								<h3>Sed sed nisi</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6 col-md-offset-2">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item6.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item6.jpg" alt="image 6">
-							</div>
-							<div class="content-gallery">
-								<h3>Modern</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item7.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item7.jpg" alt="image 7">
-							</div>
-							<div class="content-gallery">
-								<h3>Elegant</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item8.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item8.jpg" alt="image 8">
-							</div>
-							<div class="content-gallery">
-								<h3>HTML5 CSS3</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item9.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item9.jpg" alt="image 9">
-							</div>
-							<div class="content-gallery">
-								<h3>New Design</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6 col-md-offset-3">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item10.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item10.jpg" alt="image 10">
-							</div>
-							<div class="content-gallery">
-								<h3>Download</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item11.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item11.jpg" alt="image 11">
-							</div>
-							<div class="content-gallery">
-								<h3>Responsive</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
-					<div class="col-md-2 col-sm-6">
-						<div class="gallery-item">
-							<div class="image">
-								<div class="overlay">
-									<a href="/static/fiim/images/gallery/gallery-item12.jpg" data-rel="lightbox" class="fa fa-expand"></a>
-								</div>
-								<img src="/static/fiim/images/gallery/gallery-item12.jpg" alt="image 12">
-							</div>
-							<div class="content-gallery">
-								<h3>Template</h3>
-							</div>
-						</div> <!-- /.gallery-item -->
-					</div> <!-- /.col-md-2 -->
+							</div> <!-- /.gallery-item -->
+						</div> <!-- /.col-md-2 -->
+					{% endfor %}
 				</div> <!-- /.row -->
 			</div> <!-- /.slide-item -->
 		</div> <!-- /.homepage -->
