--- a/fiim/templates/fiim/base.html
+++ b/fiim/templates/fiim/base.html
@@ -36,6 +36,9 @@ http://www.templatemo.com/tm-397-concept
 	<!-- Favicons -->
     <link rel="shortcut icon" href="{% static "fiim/images/ico/favicon.ico" %}">
 
+	{% block head %}
+	{% endblock %}
+
 </head>
 <body>
 	
