--- a/fiim/templates/fiim/css/templatemo_style.css
+++ b/fiim/templates/fiim/css/templatemo_style.css
@@ -196,7 +196,7 @@ a.menu-toggle-btn {
   -webkit-box-shadow: inset 0 0 1px #666;
   -moz-box-shadow: inset 0 0 1px #666;
   box-shadow: inset 0 0 1px #666;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
   position: relative;
   overflow: hidden;
 }
