--- a/fiim/templates/fiim/documents.html
+++ b/fiim/templates/fiim/documents.html
@@ -7,20 +7,19 @@
             <div class="row">
                 <div class="col-md-9 col-sm-10">
                     <div class="inner-content">
-                        <div class="toggle-content" id="tab1">
-                            <h2 class="page-title">Нормативные документы</h2>
-                            <div class="panel-group" id="fiimAccordion">
-                                {% for doc in documents.fiim %}
-                                {% with doc_id=doc.id|stringformat:"s" %}
+                        {% for document_type in document_types %}
+                        <div class="toggle-content" id="tab{{forloop.counter|stringformat:'s'}}">
+                            <h2 class="page-title">{{document_type.name}}</h2>
+                            <div class="panel-group" id="{{document_type.code}}Accordion">
+                                {% for doc in document_type.published_documents %}
+                                {% with doc_id=doc.id|stringformat:'s' %}
                                 <div class="panel panel-default ">
                                     <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse"
                                          data-parent="#fiimAccordion" data-target="{{'#document'|add:doc_id}}">
                                         <h4 class="panel-title">
-                                            <a href="#" class="ing">{{doc.title}} от {{doc.created_at}}</a>
+                                            <a href="#" class="ing">{{doc.title}} от {{doc.created_at|date:'d.m.Y'}}</a>
                                             <span class="plus-minus-button collapse-nav-button glyphicon pull-right"></span>
                                         </h4>
-
-
                                     </div>
                                     <div id="{{'document'|add:doc_id}}" class="panel-collapse collapse"
                                          style="height: 0px;">
@@ -34,69 +33,21 @@
                             </div>
                             <!--/panel-group-->
                         </div> <!-- /.toggle-content -->
-                        <div class="toggle-content" id="tab2">
-                            <h2 class="page-title">Приказы</h2>
-                            {% for doc in documents.order %}
-                            <ul>
-                                <li>{{doc.title}} от {{doc.created_at}}</li>
-                            </ul>
-                            {% endfor %}
-                        </div> <!-- /.toggle-content -->
-                        <div class="toggle-content" id="tab3">
-                            <h2 class="page-title">Протоколы собраний</h2>
-                            {% for doc in documents.protocol %}
-                            <ul>
-                                <li>{{doc.title}} от {{doc.created_at}}</li>
-                            </ul>
-                            {% endfor %}
-                        </div> <!-- /.toggle-content -->
-                        <div class="toggle-content" id="tab4">
-                            <h2 class="page-title">Судейский комитет</h2>
-                            {% for doc in documents.sk %}
-                            <ul>
-                                <li>{{doc.title}} от {{doc.created_at}}</li>
-                            </ul>
-                            {% endfor %}
-                        </div>
-                        <div class="toggle-content" id="tab5">
-                            <h2 class="page-title">Дисциплинарный комитет</h2>
-                            {% for doc in documents.dk %}
-                            <ul>
-                                <li>{{doc.title}} от {{doc.created_at}}</li>
-                            </ul>
-                            {% endfor %}
-                        </div>
+                    {% endfor %}
 
                     </div> <!-- /.inner-content -->
                 </div> <!-- /.col-md-9 -->
                 <div class="col-md-3 col-sm-2">
                     <div id="icons">
                         <ul class="tabs">
+                            {% for document_type in document_types %}
                             <li>
-                                <a href="#tab1" class="icon-item">
-                                    <span>Нормативные документы</span>
+                                <a href="#tab{{forloop.counter|stringformat:'s'}}" class="icon-item">
+                                    <i class="{{document_type.icon}}"></i>
+                                    <span>{{document_type.name}}</span>
                                 </a> <!-- /.icon-item -->
                             </li>
-                            <li>
-                                <a href="#tab2" class="icon-item">
-                                    <span>Приказы</span>
-                                </a> <!-- /.icon-item -->
-                            </li>
-                            <li>
-                                <a href="#tab3" class="icon-item">
-                                    <span>Протоколы собраний</span>
-                                </a> <!-- /.icon-item -->
-                            </li>
-                            <li>
-                                <a href="#tab4" class="icon-item">
-                                    <span>Судейский комитет</span>
-                                </a> <!-- /.icon-item -->
-                            </li>
-                            <li>
-                                <a href="#tab5" class="icon-item">
-                                    <span>Дисциплинарный комитет</span>
-                                </a> <!-- /.icon-item -->
-                            </li>
+                            {% endfor %}
                         </ul>
                     </div> <!-- /.icons -->
                 </div> <!-- /.col-md-3 -->
