use fontawesome 5, set default icons for documents

--- a/fiim/templates/fiim/about.html
+++ b/fiim/templates/fiim/about.html
@@ -50,7 +50,7 @@
 								</li>
 								<li>
 									<a href="#tab2" class="icon-item">
-										<i class="fa fa-history"></i>
+										<i class="fas fa-history"></i>
 										<span>История</span>
 									</a> <!-- /.icon-item -->
 								</li>
