--- a/fiim/templates/fiim/css/main.css
+++ b/fiim/templates/fiim/css/main.css
@@ -1,8 +1,10 @@
 .plus-minus-button.collapse-nav-button:before {
-    content: "\2212";
+    /*content: "\2212";*/
+    content: "\e114"
 }
 .collapsed .plus-minus-button.collapse-nav-button:before {
-    content:  "\2b";
+    /*content:  "\2b";*/
+    content: "\e080";
 }
 .panel-group {
     margin-top: 30px;
