--- a/fiim/templates/fiim/documents.html
+++ b/fiim/templates/fiim/documents.html
@@ -16,14 +16,25 @@
                                 <div class="panel panel-default ">
                                     <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse"
                                          data-parent="#fiimAccordion" data-target="{{'#document'|add:doc_id}}">
-                                        <h4 class="panel-title">
-                                            <a href="#" class="ing">{{doc.title}} от {{doc.created_at|date:'d.m.Y'}}</a>
-                                            <span class="plus-minus-button collapse-nav-button glyphicon pull-right"></span>
-                                        </h4>
+                                        <div class="panel-title">
+                                            <a href="#" class="ing">
+                                                <i class="plus-minus-button collapse-nav-button glyphicon"></i>
+                                                {{doc.title}} от {{doc.created_at|date:'d.m.Y'}}
+                                            </a>
+
+                                        </div>
                                     </div>
                                     <div id="{{'document'|add:doc_id}}" class="panel-collapse collapse"
                                          style="height: 0px;">
                                         <div class="panel-body">
+                                            <div class="panel-title pull-right">
+                                                <a href="{{doc.pdf.url}}" download>
+                                                    <i class="fas fa-download"></i>
+                                                </a>
+                                                <a href="{{doc.pdf.url}}" target="_blank">
+                                                    <i class="fas fa-external-link-alt"></i>
+                                                </a>
+                                            </div>
                                             {{ doc.content|safe }}
                                         </div>
                                     </div>
