--- a/fiim/templates/fiim/css/templatemo_style.css
+++ b/fiim/templates/fiim/css/templatemo_style.css
@@ -267,7 +267,7 @@ a.menu-toggle-btn {
   width: 100%;
   max-height: 60vw;
 }
-.product-item h3.product-title {
+h3.product-title {
   margin: 15px 0;
   font-weight: 400;
   font-size: 18px;
