--- a/fiim/templates/fiim/officials.html
+++ b/fiim/templates/fiim/officials.html
@@ -2,25 +2,61 @@
 
 {% block content %}
 <div id="menu-container">
-
-		<div class="content products animated fadeInDown" id="menu-2">
-			<div class="container">
-					<div class="row">
-						{% for official in officials %}
-						<div class="col-md-4 col-sm-6">
-							<div class="product-item">
-								<img src="{{official.photo.url}}" alt="{{official.name}}">
-								<h3 class="product-title text-center" >{{official.name}}</h3>
-								<p class="text-center">{{official.position}}</p>
-								<p class="text-center">{{official.region}}</p>
-							</div> <!-- /.product-item -->
-						</div> <!-- /.col-md-4 -->
-						{% endfor %}
-					</div> <!-- /.row -->
-			</div> <!-- /.slide-item -->
-		</div> <!-- /.products -->
-
+    <div class="content products animated fadeInDown" id="menu-2">
+        <div class="container">
+            <div class="row">
+                {% for official in officials %}
+                <div class="col-md-4 col-sm-6">
+                    <div class="product-item text-center">
+                        <a href="#lightbox{{official.id}}" data-toggle="modal">
+                            <img src="{{official.photo.url}}" alt="{{official.name}}"
+                            style="max-height:300px; max-width:100%; width:auto; height:auto">
+                        </a>
+                        <h3 class="product-title text-center">{{official.name}}</h3>
+                        <p class="text-center">{{official.position}}</p>
+                        <p class="text-center">{{official.region}}</p>
+                    </div> <!-- /.product-item -->
+                </div> <!-- /.col-md-4 -->
+                {% endfor %}
+            </div> <!-- /.row -->
+        </div> <!-- /.slide-item -->
+    </div> <!-- /.products -->
 </div>
+{% for official in officials %}
+<div class="portfolio-modal modal fade" id="lightbox{{official.id}}" tabindex="-1" role="dialog" aria-hidden="true"
+     style="display: none;">
+    <div class="modal-backdrop fade in" style="height: 852px;">
+    </div>
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="modal-body row">
+                <div class="col-md-5 col-md-offset-1">
+                    <div class="center-block">
+                        <img src="{{official.photo.url}}" alt="{{official.name}}"
+                             style="max-height:400px; max-width:100%; width:auto; height:auto">
+                        <h3 class="product-title text-center">{{official.name}}</h3>
+                        <p class="text-center">{{official.position}}</p>
+                        <p class="text-center">{{official.region}}</p>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <h3 class="product-title text-center">Биография</h3>
+                    <div class="text-left">
+                        {{official.description|safe}}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
 {% block scripts %}
 <script>
