change lightbox close button

--- a/fiim/templates/fiim/officials.html
+++ b/fiim/templates/fiim/officials.html
@@ -29,10 +29,7 @@
     </div>
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-                <div class="rl">
-                </div>
-            </div>
+            <img src="static/fiim/images/close.png">
         </div>
         <div class="container">
             <div class="modal-body row">
