--- a/fiim/templates/fiim/officials.html
+++ b/fiim/templates/fiim/officials.html
@@ -25,8 +25,6 @@
 {% for official in officials %}
 <div class="portfolio-modal modal fade" id="lightbox{{official.id}}" tabindex="-1" role="dialog" aria-hidden="true"
      style="display: none;">
-    <div class="modal-backdrop fade in" style="height: 852px;">
-    </div>
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
             <img src="static/fiim/images/close.png">
@@ -40,6 +38,25 @@
                         <h3 class="product-title text-center">{{official.name}}</h3>
                         <p class="text-center">{{official.position}}</p>
                         <p class="text-center">{{official.region}}</p>
+                        <h3 class="product-title text-center">Контакты</h3>
+                        <div class="row">
+                            <div class="col-md-9 col-sm-8 col-xs-8">
+                                <p class="text-left">Телефон: {{official.phone_number}}</p>
+                            </div>
+                            <div class="col-md-3 col-sm-4 col-xs-4" style="font-size:20px">
+                                {% if official.facebook %}
+                                <a href="{{official.facebook}}" target="_blank">
+                                    <i class="fab fa-facebook-square"></i>
+                                </a>
+                                {% endif %}
+                                {% if official.vkontakte %}
+                                <a href="{{official.vkontakte}}" target="_blank">
+                                    <i class="fab fa-vk"></i>
+                                </a>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <p class="text-left">Email: {{official.email}}</p>
                     </div>
                 </div>
                 <div class="col-md-5">
@@ -47,7 +64,6 @@
                     <div class="text-left">
                         {{official.description|safe}}
                     </div>
-
                 </div>
             </div>
         </div>
