add link to pdf document to official

--- a/fiim/templates/fiim/officials.html
+++ b/fiim/templates/fiim/officials.html
@@ -54,9 +54,12 @@
                                     <i class="fab fa-vk"></i>
                                 </a>
                                 {% endif %}
+                                <a href="{{official.document.pdf.url}}" target="_blank">
+                                    <i class="far fa-file-pdf"></i>
+                                </a>
                             </div>
                         </div>
-                        <p class="text-left">Email: {{official.email}}</p>
+                        <p class="text-left">E-mail: {{official.email}}</p>
                     </div>
                 </div>
                 <div class="col-md-5">
