change contact info

--- a/fiim/templates/fiim/contact.html
+++ b/fiim/templates/fiim/contact.html
@@ -16,8 +16,8 @@
                                 </div> <!-- /.col-md-6 -->
                                 <div class="col-md-6 col-sm-6 text-right">
                                     <ul>
-                                        <li>Телефон: +38 (067) 656-89-48</li>
-                                        <li>Email: office@mafiafederation.com</li>
+                                        <li>Телефон: +38 (067) 673-09-74</li>
+                                        <li>Email: maffederation@gmail.com</li>
                                     </ul>
                                 </div> <!-- /.col-md-6 -->
                             </div> <!-- /.row -->
@@ -49,6 +49,11 @@
                             <h3 class="product-title">Дисциплинарный комитет</h3>
                             <p>E-mail: dkfiim777@gmail.com</p>
                             <p>Глава: Виталий Слуцкер</p>
+                            <div class="row text-center contact-icons">
+                                <a href="https://drive.google.com/drive/u/1/folders/1i94NP-t4mnnG2c7KCeDzqNaAip-KH4jG" target="_blank">
+                                    <i class="fab fa-google-drive"></i>
+                                </a>
+                            </div>
                         </div> <!-- /.contact-information -->
                     </div> <!-- /.inner-content -->
                 </div> <!-- /.col-md-6 -->
