fix dk gdrive link

--- a/fiim/templates/fiim/contact.html
+++ b/fiim/templates/fiim/contact.html
@@ -50,7 +50,7 @@
                             <p>E-mail: dkfiim777@gmail.com</p>
                             <p>Глава: Виталий Слуцкер</p>
                             <div class="row text-center contact-icons">
-                                <a href="https://drive.google.com/drive/u/1/folders/1i94NP-t4mnnG2c7KCeDzqNaAip-KH4jG" target="_blank">
+                                <a href="https://drive.google.com/open?id=1i94NP-t4mnnG2c7KCeDzqNaAip-KH4jG" target="_blank">
                                     <i class="fab fa-google-drive"></i>
                                 </a>
                             </div>
