add favicon, not show empty doc in official

--- a/fiim/templates/fiim/about.html
+++ b/fiim/templates/fiim/about.html
@@ -23,7 +23,7 @@
 							</div> <!-- /.toggle-content -->
 							<div class="toggle-content" id="tab2">
 								<h2 class="page-title">История</h2>
-                                <p>История Федерации - текст + фото</p>
+                                <p>Данный раздел сайта находится в разработке.</p>
                             </div> <!-- /.toggle-content -->
 							<div class="toggle-content" id="tab3">
 								<h2 class="page-title">Манифест</h2>
