--- a/fiim/templates/fiim/base.html
+++ b/fiim/templates/fiim/base.html
@@ -19,6 +19,7 @@ http://www.templatemo.com/tm-397-concept
     <meta charset="UTF-8">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="icon" href="static/fiim/images/favicon.ico" type="image/x-icon">
 
 	<!-- CSS Bootstrap & Custom -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
