add meta and header for indexing (google)

--- a/fiim/templates/fiim/about.html
+++ b/fiim/templates/fiim/about.html
@@ -1,5 +1,9 @@
 {% extends 'fiim/base.html' %}
 
+{%block meta%}
+<meta name="description" content="Федерация интеллектуальной игры мафия – официальный сайт ФИИМ" />
+{%endblock%}
+
 {% block content %}
 <div id="menu-container">
        <div class="content about animated fadeInDown" id="menu-1">
@@ -8,7 +12,7 @@
 					<div class="col-md-9 col-sm-10">
 						<div class="about-us-content">
 							<div class="toggle-content" id="tab1">
-								<h2 class="page-title">Цели</h2>
+								<h1 class="page-title">Цели</h1>
 								<ul>
 									<li>Объединить клубы, играющие в игру “Мафия” по классическим правилам, в федерацию интеллектуальной игры Мафия.</li>
 									<li>Проводить чемпионаты среди клубов ФИИМ.</li>
@@ -22,11 +26,11 @@
 								</p>
 							</div> <!-- /.toggle-content -->
 							<div class="toggle-content" id="tab2">
-								<h2 class="page-title">История</h2>
+								<h1 class="page-title">История</h1>
                                 <p>Данный раздел сайта находится в разработке.</p>
                             </div> <!-- /.toggle-content -->
 							<div class="toggle-content" id="tab3">
-								<h2 class="page-title">Манифест</h2>
+								<h1 class="page-title">Манифест</h1>
 								<p>С момента своего зарождения и до сегодняшнего дня, игра Мафия была, есть и будет сообществом интеллектуальных и независимых людей.
                                     Главным фундаментальным принципом интеллектуальной игры "Мафия" есть равенство членов сообщества друг с другом, вне зависимости от возраста, пола, расы, вероисповедания и др.
                                     <br>Мир Мафии - это доверенный круг людей, свободных от политики, предрассудков, дискриминации и других разобщающих элементов, разъединяющих наше добровольное сообщество.
