--- a/fiim/templates/fiim/contact.html
+++ b/fiim/templates/fiim/contact.html
@@ -1,6 +1,10 @@
 {% extends 'fiim/base.html' %}
 {% load message_tags %}
 
+{%block meta%}
+<meta name="description" content="Контанты федерация интеллектуальной игры мафия – официальный сайт ФИИМ" />
+{%endblock%}
+
 {% block content %}
 <div id="menu-container">
     <div class="content contact animated fadeInDown" id="menu-5">
@@ -8,7 +12,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="widget-content">
-                        <div class="page-title">Контакты</div>
+                        <div class="page-title"><h1>Контакты</h1></div>
                         <div class="contact-information">
                             <div class="row">
                                 <div class="col-md-6 col-sm-6">
@@ -32,7 +36,7 @@
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
-                            <h3 class="product-title">Судейский комитет</h3>
+                            <h2 class="product-title">Судейский комитет</h2>
                             <p>E-mail: skfiim777@gmail.com</p>
                             <p>Глава: Андрей Фокин</p>
                             <div class="row text-center contact-icons">
@@ -46,7 +50,7 @@
                                     <i class="fab fa-google-drive"></i>
                                 </a>
                             </div>
-                            <h3 class="product-title">Дисциплинарный комитет</h3>
+                            <h2 class="product-title">Дисциплинарный комитет</h2>
                             <p>E-mail: dkfiim777@gmail.com</p>
                             <p>Глава: Виталий Слуцкер</p>
                             <div class="row text-center contact-icons">
