--- a/fiim/templates/fiim/partners.html
+++ b/fiim/templates/fiim/partners.html
@@ -1,6 +1,10 @@
 {% extends 'fiim/base.html' %}
 {% load mathfilters %}
 
+{%block meta%}
+<meta name="description" content="Партнеры федерация интеллектуальной игры мафия – официальный сайт ФИИМ" />
+{%endblock%}
+
 {% block head %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 {% endblock %}
