--- a/fiim/templates/fiim/base.html
+++ b/fiim/templates/fiim/base.html
@@ -8,9 +8,10 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 
-	<title>ФИИМ</title>
-    <meta name="keywords" content="" />
-	<meta name="description" content="" />
+	<title>Федерация интеллектуальной игры мафия</title>
+	{% block meta %}
+	{% endblock %}
+    <meta name="keywords" content="фиим, федерация интеллектуальной игры мафия, интеллектуальная игра мафия, московская мафия, классическая мафия, федерация спортивной мафии" />
 <!-- 
 Concept Template 
 http://www.templatemo.com/tm-397-concept 
