--- a/fiim/templates/fiim/documents.html
+++ b/fiim/templates/fiim/documents.html
@@ -1,5 +1,9 @@
 {% extends 'fiim/base.html' %}
 
+{%block meta%}
+<meta name="description" content="Документы федерация интеллектуальной игры мафия – официальный сайт ФИИМ" />
+{%endblock%}
+
 {% block content %}
 <div id="menu-container">
     <div class="content services animated fadeInDown" id="menu-3">
@@ -9,7 +13,7 @@
                     <div class="inner-content">
                         {% for document_type in document_types %}
                         <div class="toggle-content" id="tab{{forloop.counter|stringformat:'s'}}">
-                            <h2 class="page-title">{{document_type.name}}</h2>
+                            <h1 class="page-title">{{document_type.name}}</h1>
                             <div class="panel-group" id="{{document_type.code}}Accordion">
                                 {% for doc in document_type.published_documents %}
                                 {% with doc_id=doc.id|stringformat:'s' %}
@@ -17,8 +21,8 @@
                                     <div class="panel-heading accordion-toggle collapsed" data-toggle="collapse"
                                         data-parent="#fiimAccordion" data-target="{{'#document'|add:doc_id}}">
                                         <div class="panel-title">
-                                            <i class="plus-minus-button collapse-nav-button glyphicon"></i>
-                                            {{doc.title}} от {{doc.created_at|date:'d.m.Y'}}
+                                            <h2><i class="plus-minus-button collapse-nav-button glyphicon"></i>
+                                            {{doc.title}} от {{doc.created_at|date:'d.m.Y'}}</h2>
                                         </div>
                                     </div>
                                     <div id="{{'document'|add:doc_id}}" class="panel-collapse collapse"
