allow empty document content
if document content is empty show default text

--- a/fiim/templates/fiim/documents.html
+++ b/fiim/templates/fiim/documents.html
@@ -36,7 +36,7 @@
                                                     <i class="fas fa-external-link-alt"></i>
                                                 </a>
                                             </div>
-                                            {{ doc.content|safe }}
+                                            {{ doc.content_adjusted|safe }}
                                             {% if doc.participant.all %}
                                             <div>
                                                 На совете присутствовали:
