--- a/fiim/templates/fiim/contact.html
+++ b/fiim/templates/fiim/contact.html
@@ -21,7 +21,7 @@
                                 <div class="col-md-6 col-sm-6 text-right">
                                     <ul>
                                         <li>Телефон: +38 (067) 673-09-74</li>
-                                        <li>Email: maffederation@gmail.com</li>
+                                        <li>Email: support@mafiaworldtour.com</li>
                                     </ul>
                                 </div> <!-- /.col-md-6 -->
                             </div> <!-- /.row -->
@@ -52,7 +52,7 @@
                             </div>
                             <h2 class="product-title">Дисциплинарный комитет</h2>
                             <p>E-mail: dkfiim777@gmail.com</p>
-                            <p>Глава: Виталий Слуцкер</p>
+                            <p>Глава: Андрей Лагунов</p>
                             <div class="row text-center contact-icons">
                                 <a href="https://drive.google.com/open?id=1i94NP-t4mnnG2c7KCeDzqNaAip-KH4jG" target="_blank">
                                     <i class="fab fa-google-drive"></i>
